--- a/fake.html
+++ b/fake.html
@@ -102,7 +102,7 @@
                     <img class="img-responsive img-border img-full" src="" alt="">
                     <h2 id="smc">Fake Facebook profile
                         <br>
-                        <small style="color:red">"He posted the girl’s phone number on the FB page and invited people to call her"</small>
+                        <small style="color:blue">"He posted the girl’s phone number on the FB page and invited people to call her"</small>
                     </h2>
                     <p align ="justify">Hyderabad: A 23-year-old man has been arrested by the Cyberabad Cyber Crime police for creating a fake Facebook account of his former girlfriend. He posted the girl’s phone number on the FB page and invited people to call her.</p>
 <p align ="justify">
@@ -122,9 +122,9 @@ Several people started calling the victim and harassing her. Following an invest
 
                 <div class="col-lg-12 text-center">
                     <ul class="pager">
-                        <li class="previous"><a href="ht.html" class="button btn-lg button-block btn btn-warning"><span style="color:#ff9933">&larr; Older</span></a>
+                        <li class="previous"><a href="ht.html" class="button btn-lg button-block btn btn-warning"><span style="color:blue">&larr; Older</span></a>
                         </li>
-                        <li class="next"><a href="honey.html" class="button btn-lg button-block btn btn-warning"><span style="color:#ff9933">Newer &rarr;</span></a>
+                        <li class="next"><a href="honey.html" class="button btn-lg button-block btn btn-warning"><span style="color:blue">Newer &rarr;</span></a>
                         </li>
                     </ul>
                 </div>
