--- a/honey.html
+++ b/honey.html
@@ -103,7 +103,7 @@
                     <img class="img-responsive img-border img-full" src="" alt="">
                     <h2> Honeytrap
                         <br>
-                        <small style="color:red">"ISI used Facebook to honeytrap IAF airman into spilling secrets"</small>
+                        <small style="color:blue">"ISI used Facebook to honeytrap IAF airman into spilling secrets"</small>
                     </h2>
                     <p align ="justify">NEW DELHI: Ranjith KK, an Indian Air Force employee, got a Facebook friend request from a pretty woman based in the United Kingdom three years ago. He thought himself the luckiest of young men when the friendship took a spicy turn that included dirty talk late into the night. Already addicted to social media, the 30-something man began to remain online almost through the day for the woman, McNaught Damini, to come online and fulfil his fantasies. </p>
 <p align ="justify">
@@ -117,9 +117,9 @@ During one such tete-a-tete, McNaught seductively asked the Kerala man for some 
 
                 <div class="col-lg-12 text-center">
                     <ul class="pager">
-                        <li class="previous"><a href="fake.html" class="button btn-lg button-block btn btn-warning"><span style="color:#ff9933">&larr; Older</span></a>
+                        <li class="previous"><a href="fake.html" class="button btn-lg button-block btn btn-warning"><span style="color:blue">&larr; Older</span></a>
                         </li>
-                        <li class="next"><a href="ht.html"class="button btn-lg button-block btn btn-warning"><span style="color:#ff9933">Newer &rarr;</span></a>
+                        <li class="next"><a href="ht.html"class="button btn-lg button-block btn btn-warning"><span style="color:blue">Newer &rarr;</span></a>
                         </li>
                     </ul>
                 </div>
