--- a/ht.html
+++ b/ht.html
@@ -103,7 +103,7 @@
                     <img class="img-responsive img-border img-full" src="" alt="">
                     <h2>Online Human Trafficking
                         <br>
-                        <small style="color:red">"First Case of Child Human Trafficking on Facebook Reported From India"</small>
+                        <small style="color:blue">"First Case of Child Human Trafficking on Facebook Reported From India"</small>
                     </h2>
                     <p align ="justify">Through pedophiles using the social networking site to trade explicit images of children – some only newborns – to online prostitution sites openly enticing men to ‘like’ their pages and use their ‘services,’ Facebook is the new home of human trafficking. Sometimes truth is stranger than fiction. And when it involves Facebook, the truth is often even stranger; reportedly five people have been arrested in India in connection to the Facebook sale of a baby – including the boy’s grandfather. We all know how badly our country is facing the menace of human trafficking, we guess it is just going to get aggravated thanks to the social networking sites.</p>
 <p align ="justify">
@@ -122,9 +122,9 @@ Please don’t turn a blind eye to incidents like these. Do share this among who
 
                 <div class="col-lg-12 text-center">
                     <ul class="pager">
-                        <li class="previous"><a href="honey.html" class="button btn-lg button-block btn btn-warning"><span style="color:#ff9933">&larr; Older</span></a>
+                        <li class="previous"><a href="honey.html" class="button btn-lg button-block btn btn-warning"><span style="color:blue">&larr; Older</span></a>
                         </li>
-                        <li class="next"><a href="fake.html" class="button btn-lg button-block btn btn-warning"><span style="color:#ff9933">Newer &rarr;</span></a>
+                        <li class="next"><a href="fake.html" class="button btn-lg button-block btn btn-warning"><span style="color:blue">Newer &rarr;</span></a>
                         </li>
                     </ul>
                 </div>
